--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&family=Raleway:ital,wght@0,700;1,500&display=swap');
+
+
 body {
-    background-color: rgb(190, 185, 210);
+    background-color: rgb(202, 196, 226);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,15 +10,32 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.titulo {
+    background-color: rgb(248, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 15px;
+    color: rgb(67, 67, 67);
+}
+
 h1 {
-    font-size: 15px;
+    font-size: 30px;
     display: block;
-    margin: 10px 0 0 0;
+    margin: 0;
+    font-weight: 700;
+    font-family: Raleway;
+    text-align: center;
 }
 
 p {
-    font-size: 10px;
-    margin: 2px;
+    font-size: 18px;
+    margin: 3px;
+    font-weight: 500;
+    font-family: Raleway;
+    font-style: italic;
 }
 
 .calculadora {
@@ -24,8 +44,9 @@ p {
     justify-content: center;
     background-color: rgb(73, 73, 73);
     border-radius: 10px;
-    width: 150px;
-    margin: 10px 0 0 0;
+    width: 300px;
+    margin-top: 70px;
+    box-shadow: 5px 5px 5px rgba(66, 66, 66, 0.669);
 }
 
 .botones {
@@ -34,14 +55,14 @@ p {
     justify-content: flex-start;
     align-items: center;
     text-align: center;
-    margin: 3px 0 0 4px;
+    margin: 5px 0 0 4px;
 }
 
 .boton1, .boton2, .boton3 {
-    height: 8px;
-    width: 8px;
-    border-radius: 4px;
-    margin: 2px;
+    height: 14px;
+    width: 14px;
+    border-radius: 7px;
+    margin: 4px;
 }
 
 .boton1 {
@@ -66,9 +87,9 @@ p {
     justify-content: end;
     text-align: end;
     margin: 10px 10px 0 10px;
-    font-size: 35px;
+    font-size: 45px;
     font-weight: lighter;
-    height: 10vh;
+    height: 8vh;
 }
 
 .teclas {
@@ -76,7 +97,7 @@ p {
     display: flex;
     flex-direction: column;
     row-gap: 2px;
-    height: 30vh;
+    font-size: 20px;
     flex-basis: 25%;
     text-align: center;
     justify-content: center;
@@ -88,7 +109,7 @@ p {
     column-gap: 2px;
     justify-content: center;
     align-items: center;
-    height: 8vh;
+    height: 55px;
 }
 
 .tecla {
@@ -96,7 +117,7 @@ p {
     justify-content: center;
     align-items: center;
     color: white;
-    height: 8vh;
+    height: 55px;
     flex-basis: 25%;
     border-radius: 1px
 }
@@ -106,8 +127,8 @@ p {
     justify-content: center;
     align-items: center;
     color: white;
-    height: 8vh;
-    flex-basis: 52%;
+    height: 55px;
+    flex-basis: 51%;
     border-radius: 1px;
 }
 
@@ -122,7 +143,7 @@ p {
 .n {
     background-color: orange;
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .esq_inf_izq {
@@ -131,4 +152,21 @@ p {
 
 .esq_inf_der {
     border-radius: 1px 1px 8px 1px;
+}
+
+.creditos {
+    background-color: rgb(248, 255, 255);
+    display: flex;
+    flex-direction: column;
+    align-itSems: center;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 80px;
+    color: rgb(67, 67, 67);
+    width: 480px;
+}
+
+.creditos a {
+    color: rgb(67, 67, 67);
+    font-weight: 700;
 }
